--- a/src/App.scss
+++ b/src/App.scss
@@ -425,9 +425,9 @@ header {
   font-weight: bold;
 }
 
-h3 {
+#coursework h3 {
   text-decoration: underline;
-  font-size: 2.8rem;
+  font-size: 1.8rem;
   font-weight: bold;
   margin-top: 25px;
   color: #111;
